--- a/marriage/.settings/org.eclipse.core.resources.prefs
+++ b/marriage/.settings/org.eclipse.core.resources.prefs
@@ -1,16 +1,36 @@
 eclipse.preferences.version=1
+encoding//WebRoot/articleConsulting.jsp=UTF-8
+encoding//WebRoot/css/articleConsulting.css=UTF-8
+encoding//WebRoot/css/back_top.css=UTF-8
+encoding//WebRoot/css/di.css=UTF-8
+encoding//WebRoot/css/ic.css=UTF-8
 encoding//WebRoot/css/index.css=UTF-8
+encoding//WebRoot/css/jdbcSqlBooks.css=UTF-8
+encoding//WebRoot/css/login.css=UTF-8
 encoding//WebRoot/css/register.css=UTF-8
+encoding//WebRoot/css/select_top.css=UTF-8
+encoding//WebRoot/css/talk.css=UTF-8
 encoding//WebRoot/css/top.css=UTF-8
+encoding//WebRoot/di.jsp=UTF-8
+encoding//WebRoot/ic.jsp=UTF-8
 encoding//WebRoot/img/articleConsulting.gif=UTF-8
 encoding//WebRoot/index.jsp=UTF-8
+encoding//WebRoot/jdbcSql/jdbcSqlBooks.jsp=UTF-8
 encoding//WebRoot/js/bootstrap.js=UTF-8
 encoding//WebRoot/js/canvas-particle.js=UTF-8
+encoding//WebRoot/js/ic.js=UTF-8
 encoding//WebRoot/js/jquery-3.1.1.min.js=UTF-8
 encoding//WebRoot/js/jquery.js=UTF-8
 encoding//WebRoot/js/jquery.min.js=UTF-8
 encoding//WebRoot/js/jquery.pagination.js=UTF-8
 encoding//WebRoot/js/login.js=UTF-8
 encoding//WebRoot/js/register.js=UTF-8
+encoding//WebRoot/js/talk.js=UTF-8
+encoding//WebRoot/js/top.js=UTF-8
 encoding//WebRoot/js/waypoints.js=UTF-8
 encoding//WebRoot/person.html=UTF-8
+encoding//WebRoot/show_books.jsp=UTF-8
+encoding//WebRoot/talk.jsp=UTF-8
+encoding//src/servlet/control/HandleRegister.java=UTF-8
+encoding//src/user/UserInfo.java=UTF-8
+encoding//src/user/UserLogic.java=UTF-8
