--- a/marriage/.settings/org.eclipse.core.resources.prefs
+++ b/marriage/.settings/org.eclipse.core.resources.prefs
@@ -7,6 +7,7 @@ encoding//WebRoot/css/ic.css=UTF-8
 encoding//WebRoot/css/index.css=UTF-8
 encoding//WebRoot/css/jdbcSqlBooks.css=UTF-8
 encoding//WebRoot/css/login.css=UTF-8
+encoding//WebRoot/css/pagination.css=UTF-8
 encoding//WebRoot/css/register.css=UTF-8
 encoding//WebRoot/css/select_top.css=UTF-8
 encoding//WebRoot/css/talk.css=UTF-8
@@ -16,6 +17,8 @@ encoding//WebRoot/ic.jsp=UTF-8
 encoding//WebRoot/img/articleConsulting.gif=UTF-8
 encoding//WebRoot/index.jsp=UTF-8
 encoding//WebRoot/jdbcSql/jdbcSqlBooks.jsp=UTF-8
+encoding//WebRoot/jdbcSql/jdbcSqlBooks_2.jsp=UTF-8
+encoding//WebRoot/jdbcSql/jdbcSqlBooks_9_2.jsp=UTF-8
 encoding//WebRoot/js/bootstrap.js=UTF-8
 encoding//WebRoot/js/canvas-particle.js=UTF-8
 encoding//WebRoot/js/ic.js=UTF-8
@@ -30,6 +33,7 @@ encoding//WebRoot/js/top.js=UTF-8
 encoding//WebRoot/js/waypoints.js=UTF-8
 encoding//WebRoot/person.html=UTF-8
 encoding//WebRoot/show_books.jsp=UTF-8
+encoding//WebRoot/show_books_2.jsp=UTF-8
 encoding//WebRoot/talk.jsp=UTF-8
 encoding//src/servlet/control/HandleRegister.java=UTF-8
 encoding//src/user/UserInfo.java=UTF-8
