--- a/marriage/.settings/org.eclipse.core.resources.prefs
+++ b/marriage/.settings/org.eclipse.core.resources.prefs
@@ -10,6 +10,7 @@ encoding//WebRoot/css/login.css=UTF-8
 encoding//WebRoot/css/pagination.css=UTF-8
 encoding//WebRoot/css/register.css=UTF-8
 encoding//WebRoot/css/select_top.css=UTF-8
+encoding//WebRoot/css/show.css=UTF-8
 encoding//WebRoot/css/talk.css=UTF-8
 encoding//WebRoot/css/top.css=UTF-8
 encoding//WebRoot/di.jsp=UTF-8
